# vault-init

./: .gitignore  .ignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  flake.nix  go.mod  go.sum  main.go  result  store_file.go  store_kubesecret.go
.github/workflows/: build.yml  build_nix.yml  push.yml
internal/pkg/save/: save.go  save_file.go  save_file_test.go  save_kubesecret.go  save_test.go  save_vaultkv.go  save_vaultkv_test.go
internal/pkg/sealops/: vaultinit.go
internal/pkg/util/: env.go
scripts/: build.sh
src/: config.rs  k8s.rs  main.rs  vault.rs
src/save/: file.rs  kube_secret.rs  mod.rs
src/vault/: mod.rs
src/vault/models/: mod.rs
src/vault/models/auth/: token.rs
src/vault/models/sys/: generate_root.rs  init.rs  mod.rs  seal_status.rs  unseal.rs
test/: k3d-kube-secret.yaml  k3d-vaultkv.yaml  k8s-real.yaml  kube.yaml  server.hcl  vault-init-config.hcl  vault-init.json  vault-server.hcl
