[package]
name = "vault-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
anyhow = "*"
reqwest = { version = "*", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
url = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
kube = { version = "*", default-features = false, features = [
  "client",
  "rustls-tls",
] }
k8s-openapi = { version = "*", features = ["v1_26"] }
tokio = { version = "*", default-features = false, features = ["macros"] }
data-encoding = "*"
