[package]
name = "vault-init"
version = "3.0.0"
edition = "2021"
authors = ["Pierce Bartine"]

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
anyhow = "*"
reqwest = { version = "*", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
url = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
kube = { version = "*", default-features = false, features = [
  "client",
  "rustls-tls",
] }
k8s-openapi = { version = "*", features = ["v1_26"] }
tokio = { version = "*", default-features = false, features = ["macros", "fs"] }
data-encoding = "*"
hcl-rs = "*"
async-trait = "*"
secrecy = "*"
